<resources>
    <string name="app_name">MadCity</string>
    <string name="author_name">Created by Benjamin Bowers</string>


    <!-- Title Screen -->
    <string name="settings_button">Settings</string>
    <string name="new_game_button">New Game</string>
    <string name="resume_game_button">Resume Game</string>

    <!-- Selector -->
    <string name="selector_remove">Destroy</string>
    <string name="selector_add">Build</string>
    <string name="selector_inspect">Details</string>
    <string name="selector_touch">Touch</string>

    <!-- Status bar -->
    <string name="status_time">Time Elapsed</string>
    <string name="status_money">Money</string>
    <string name="status_population">Population</string>
    <string name="status_employment">Employment</string>
    <string name="money_format">$%d</string>
    <string name="pop_format">%d</string>
    <string name="status_rate">%+.02f</string>
    <string name="emp_format">%.01f%%</string>

    <!--  Settings menu strings -->
    <string name="default_settings">Default Settings</string>
    <string name="default_settings_toast">Default settings restored</string>

    <string name="settings_map_width">Map Width</string>
    <string name="settings_map_height">Map Height</string>
    <string name="settings_initial_money">Initial Money</string>
    <string name="settings_family_size">Family Size</string>
    <string name="settings_shop_size">Shop Size</string>
    <string name="settings_salary">Salary</string>
    <string name="settings_tax_rate">Tax Rate</string>
    <string name="settings_service_cost">Service Cost</string>
    <string name="settings_house_buildingCost">House Building Cost</string>
    <string name="settings_comm_buildingCost">Commercial Building Cost</string>
    <string name="settings_road_buildingCost">Road Building Cost</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Map -->
    <string name="update_button">Earn cash!</string>
    <string name="structure_warning">Structures can only be placed next to roads</string>
    <string name="insufficient_funds">Insufficient funds!</string>
    <string name="structure_exists">Structure must be deleted first</string>

    <!-- Game Over Dialog -->
    <string name="game_over_prompt">Game Over!</string>
    <string name="return_title_screen">Return to title screen</string>

    <!-- Map Details -->
    <string name="xloc_title">x:</string>
    <string name="yloc_title">y:</string>
    <string name="structure_type">Type:</string>
    <string name="image_desc">Structure image</string>

    <!-- Structure Selector -->
    <string name="structure_selector_title">Structures</string>
    
    <!-- Structures -->
    <string name="residential_title">Residential</string>
    <string name="commercial_title">Commercial</string>
    <string name="road_title">Road</string>

     <string name="ic_building1">Farm house</string>
     <string name="ic_building2">Cottage</string>
     <string name="ic_building3">Barn</string>
     <string name="ic_building4">House</string>
     <string name="ic_building5">Factory</string>
     <string name="ic_building6">Mechanic</string>
     <string name="ic_building7">Church</string>
     <string name="ic_building8">Store</string>
     <string name="ic_road_ns">Road</string>
     <string name="ic_road_ew">Road</string>
     <string name="ic_road_nsew">Road</string>
     <string name="ic_road_ne">Road</string>
     <string name="ic_road_nw">Road</string>
     <string name="ic_road_se">Road</string>
     <string name="ic_road_sw">Road</string>
     <string name="ic_road_n">Road</string>
     <string name="ic_road_e">Road</string>
     <string name="ic_road_s">Road</string>
     <string name="ic_road_w">Road</string>
     <string name="ic_road_nse">Road</string>
     <string name="ic_road_nsw">Road</string>
     <string name="ic_road_new">Road</string>
     <string name="ic_road_sew">Road</string>
</resources>
