<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/status_bar"
    android:orientation="horizontal">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/status_time"
        app:srcCompat="@drawable/status_time" />

    <TextView
        android:id="@+id/status_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/status_money"
        app:srcCompat="@drawable/status_money" />

    <TextView
        android:id="@+id/status_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/status_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/status_population"
        app:srcCompat="@drawable/status_population" />

    <TextView
        android:id="@+id/status_population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/status_employment"
        app:srcCompat="@drawable/status_employment" />

    <TextView
        android:id="@+id/status_employment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>