<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:id="@+id/details_image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image_desc"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/details_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:inputType="text" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/structure_type"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/structure_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xloc_title"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/y_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yloc_title"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/x_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
