<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_vertical"
    android:paddingRight="20dp"
    android:paddingLeft="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="80sp" />
    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game_button"/>
    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_button"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/ic_building2" />
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/title_arrow"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/ic_building5" />
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/title_arrow"/>

    </LinearLayout>

</LinearLayout>
